fix: correct padding on menu for non ios devices

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -466,14 +466,16 @@
     top: calc(-4rem - env(safe-area-inset-top));
   }
 
-  .padding-bottom-safe {
-    padding-bottom: calc(env(safe-area-inset-bottom));
+  .absolute-bottom-shift {
+    bottom: calc(5rem + env(safe-area-inset-bottom));
   }
 
-  @media all and (display-mode: browser) {
-    .padding-bottom-safe {
-      @apply pb-4;
-    }
+  .safe-shift-edit-menu {
+    bottom: calc(54px + env(safe-area-inset-bottom));
+  }
+
+  .padding-bottom-safe {
+    padding-bottom: env(safe-area-inset-bottom);
   }
 
   .min-h-screen-shift {
